tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_inheritance_errors@super_top_of_chain.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/inheritance/super_top_of_chain.txt
---
error: Tried to use super() in the top level block
 --> top:1:19
  |
1 | {% block hey %}{{ super() }}{% endblock hey %}
  |                   ^^^^^^^
